# pvss

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  asn1.py  decrypt_share  demo  genparams  groups.py  pvss.py  pyproject.toml  reconstruct  run  shamir  share_secret  tox.ini  user_createkey  verify_shares
doc/: ASN1.html  ASN1.rst  api.rst  changelog.rst  cli.rst  conf.py  contributing.rst  glossary.rst  index.rst  install.rst  license.rst  notation.rst  operations.rst  usecases.rst  workflow.rst
doc/_static/: custom.css
doc/math/: index.rst  notation.rst
doc/math/operations/: blaa  index.rst  initialization.rst  receiver-keypair.rst  reconstruction.rst  reencryption.rst  secret-splitting.rst  user-keypair.rst
doc/workflow/: index.rst  initialization.rst  receiver-keypair.rst  reconstruction.rst  reencryption.rst  secret-splitting.rst  user-keypair.rst
pvss/: __init__.py  asn1.py  cli.py  groups.py  pvss.py  qr.py  ristretto_255.py  zq.py
stubs/asn1crypto/: algos.py  algos.pyi  core.py  core.pyi  csr.pyi  pem.py  pem.pyi
stubs/gmpy2/: __init__.pyi
stubs/pytest/: __init__.py
tests/: test_asn1.py  test_cli.py  test_pvss.py  test_qr.py  test_ristretto255.py  test_zq.py
