[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

##############
### Poetry ###
##############

[tool.poetry]
name = "pvss"
version = "0.2.0"
description = "Public Verifiable Secret Splitting in Python"
authors = ["Jörn Heissler <nosuchaddress@joern.heissler.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/joernheissler/pvss"
repository = "https://github.com/joernheissler/pvss"
documentation = "https://pvss.1e8.de/"
keywords = [
    "pvss",
    "secret sharing",
    "secret splitting",
    "shamir",
    "zero knowledge",
    "ristretto25519",
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
asn1crypto = "^1.5"
sphinx = { version = "^6.1", optional = true }
sphinx-rtd-theme = { version = "^1.2", optional = true }
gmpy2 = { version = "^2.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
tox = "^4.4"
gmpy2 = "^2.1"
coverage = "^7.2"
mypy = "^1.1"
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.scripts]
pvss = 'pvss.cli:cli'

[tool.poetry.extras]
docs = [
    "gmpy2",
    "sphinx",
    "sphinx-rtd-theme",
]

#############
### Black ###
#############

[tool.black]
line-length = 96

#############
### Isort ###
#############

[tool.isort]
profile = "black"

################
### Coverage ###
################

[tool.coverage]
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = [
    "tests",
    "pvss",
]

[tool.coverage.html]
directory = "coverage_html_report"

##############
### Pylint ###
##############

[tool.pylint."messages control"]
disable = "unsubscriptable-object"
