[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

##############
### Poetry ###
##############

[tool.poetry]
name = "pvss"
version = "0.2.0"
description = "Public Verifiable Secret Splitting in Python"
authors = ["Jörn Heissler <nosuchaddress@joern.heissler.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/joernheissler/pvss"
repository = "https://github.com/joernheissler/pvss"
documentation = "https://pvss.1e8.de/"
keywords = [
    "pvss",
    "secret sharing",
    "secret splitting",
    "shamir",
    "zero knowledge",
    "ristretto25519",
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3"
asn1crypto = "^1.5"
sphinx = { version = "^9.1", optional = true }
sphinx-rtd-theme = { version = "^3.1", optional = true }
gmpy2 = { version = "^2.3", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
tox = "^4.53"
gmpy2 = "^2.3"
coverage = "^7.13"
mypy = "^1.20"
black = "^26.3"
isort = "^8.0"

[tool.poetry.scripts]
pvss = 'pvss.cli:cli'

[tool.poetry.extras]
docs = [
    "gmpy2",
    "sphinx",
    "sphinx-rtd-theme",
]

#############
### Black ###
#############

[tool.black]
line-length = 96

#############
### Isort ###
#############

[tool.isort]
profile = "black"

################
### Coverage ###
################

[tool.coverage]
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = [
    "tests",
    "pvss",
]

[tool.coverage.html]
directory = "coverage_html_report"

##############
### Pylint ###
##############

[tool.pylint."messages control"]
disable = "unsubscriptable-object"
