[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

##############
### Poetry ###
##############

[project]
name = "pvss"
version = "0.3.0"
description = "Public Verifiable Secret Splitting in Python"
license = "MIT"
readme = "README.rst"
requires-python = ">=3.12"
authors = [
    {name = "Jörn Heissler"},
]
keywords = [
    "pvss",
    "secret sharing",
    "secret splitting",
    "shamir",
    "zero knowledge",
    "ristretto25519",
]

dynamic = [
    "classifiers",
    "dependencies",
]

[project.urls]
documentation = "https://pvss.1e8.de/"
homepage = "https://github.com/joernheissler/pvss"
repository = "https://github.com/joernheissler/pvss"

[project.scripts]
pvss = 'pvss.cli:cli'

[project.optional-dependencies]
docs = [
    "gmpy2>=2.3,<3.0",
    "sphinx>=9.1,<10.0",
    "sphinx-rtd-theme>=3.1,<4.0",
]

[tool.poetry]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
click = "^8.3"
asn1crypto = "^1.5"
gmpy2 = { version = "^2.3", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
tox = "^4.53"
gmpy2 = "^2.3"
coverage = "^7.13"
mypy = "^1.20"
black = "^26.3"
isort = "^8.0"


#############
### Black ###
#############

[tool.black]
line-length = 96

#############
### Isort ###
#############

[tool.isort]
profile = "black"

################
### Coverage ###
################

[tool.coverage]
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = [
    "tests",
    "pvss",
]

[tool.coverage.html]
directory = "coverage_html_report"

##############
### Pylint ###
##############

[tool.pylint."messages control"]
disable = "unsubscriptable-object"
